objects/Email_SFDC2__c.object
<CustomObject>
    <description>SFDC2 Email  objects are used to allow storing an unlimited number of current and historical email addresses for Leads and Personal Accounts.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Emails</relationshipLabel>
        <relationshipName>Email_Addresses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email_Status__c</fullName>
        <label>Email Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Unverified</fullName>
                    <default>true</default>
                    <label>Unverified</label>
                </value>
                <value>
                    <fullName>Verified</fullName>
                </value>
                <value>
                    <fullName>Bad</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email_Type__c</fullName>
        <description>Type of email. Will not necessarily match Parent Record Type, e.g. an employee contact with a Person Account could have an Email with Parent Record Type = &apos;Personal&apos; and Email Type = &apos;Primary Business&apos;</description>
        <label>Email Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Primary Personal</fullName>
                </value>
                <value>
                    <fullName>Primary Business</fullName>
                </value>
                <value>
                    <fullName>Other Personal</fullName>
                    <default>true</default>
                    <label>Other Personal</label>
                </value>
                <value>
                    <fullName>Other Business</fullName>
                </value>
                <value>
                    <fullName>Former</fullName>
                </value>
                <value>
                    <fullName>JH Email</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to associated Lead record</description>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Emails</relationshipLabel>
        <relationshipName>Email_Addresses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SQL_ID__c</fullName>
        <externalId>true</externalId>
        <label>SQL ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Email</label>
    <nameField>
        <displayFormat>EML-{0000}</displayFormat>
        <label>Email Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Emails</pluralLabel>
    <recordTypes>
        <fullName>Account_Email</fullName>
        <active>true</active>
        <label>Account Email</label>
    </recordTypes>
    <recordTypes>
        <fullName>Lead_Email</fullName>
        <active>true</active>
        <label>Lead Email</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Business_Emails</fullName>
        <active>true</active>
        <description>Prevent Phone objects on business accounts from having primary home or mobile numbers</description>
        <errorConditionFormula>IF( !ISNULL( Account__c) 
&amp;&amp; !Account__r.IsPersonAccount 
&amp;&amp; LEFT( Account__r.Account_Type_SFDC2__c ,2) != &apos;JH&apos; 
&amp;&amp; TEXT(Email_Type__c) == &apos;Primary Personal&apos;, 
true 
, 
false 
)</errorConditionFormula>
        <errorMessage>Business accounts can not have primary personal email addresses</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>JH_Customer</fullName>
        <active>true</active>
        <description>Prevent primary email addresses from being updated on JH accounts</description>
        <errorConditionFormula>IF( !ISNULL( Account__c ) 
&amp;&amp; LEFT( Account__r.Account_Type_SFDC2__c, 2 ) == &apos;JH&apos;
    &amp;&amp; LEFT(  RecordType.DeveloperName , 7 ) == &apos;Primary&apos;, 
true 
, 
false 
)</errorConditionFormula>
        <errorMessage>Primary email addresses on accounts with JH customer records must be updated in JH.</errorMessage>
    </validationRules>
</CustomObject>